# Trip-Room

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/trip/: qt_trip_client.hpp  trip_http_server.hpp  trip_service.hpp
include/trip/common/: role.hpp  status.hpp  status_or.hpp
include/trip/entities/: budget_settings.hpp  budget_summary.hpp  chat_message.hpp  day.hpp  event.hpp  expense.hpp  plan_item.hpp  search_hit.hpp  task.hpp  trip.hpp  trip_info.hpp  trip_summary.hpp
src/: qt_trip_client.cpp  qt_trip_client_main.cpp  trip_http_server.cpp  trip_http_server_detail.hpp  trip_http_server_http_session.cpp  trip_http_server_impl.hpp  trip_http_server_impl_core.cpp  trip_http_server_json.cpp  trip_http_server_parse.cpp  trip_http_server_routes.cpp  trip_http_server_routes_auth.cpp  trip_http_server_routes_budget_sync.cpp  trip_http_server_routes_common.cpp  trip_http_server_routes_itinerary.cpp  trip_http_server_routes_support.hpp  trip_http_server_routes_task_chat.cpp  trip_http_server_routes_trip_collab.cpp  trip_http_server_ws_session.cpp  trip_service_budget.cpp  trip_service_collab.cpp  trip_service_core.cpp  trip_service_io.cpp  trip_service_itinerary.cpp  trip_service_tasks.cpp
tests/: trip_http_server_tests.cpp  trip_qt_client_tests.cpp  trip_service_tests.cpp
